# challenge-boilerplate

./: .gitignore  README.md  pyproject.toml  pytest.ini
front_end/: .prettierignore  package-lock.json  package.json
front_end/src/: App.tsx
front_end/src/api/: index.ts
front_end/src/components/: QuestionForm.tsx  QuestionModal.tsx  QuestionsTable.tsx
front_end/src/hooks/: questions.ts
front_end/src/schemas/: question.ts
front_end/src/types/: index.ts
prism/: settings.py  urls.py
questions/: models.py  serializers.py  services.py  urls.py  views.py
questions/migrations/: 0001_initial.py
tests/: conftest.py
tests/test_questions/: test_views.py
utils/: models.py
